GenTablas historicos cargados

--- a/test/dte_testing.ipynb
+++ b/test/dte_testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,21 +83,21 @@
     "database = 'TAPI'\n",
     "\n",
     "tabla_Q_Reporte_NO_Corregidos = 'Q_Reporte_NO_Corregidos'\n",
-    "tabla_GenTER_NO_Corregidos = 'GenTer_NO_Corregidos'\n",
+    "tabla_GenTER_NO_Corregidos = 'GenTER_NO_Corregidos'\n",
     "tabla_GenHID_NO_Corregidos = 'GenHID_NO_Corregidos'\n",
     "tabla_GenMATER_NO_Corregidos = 'GenMATER_NO_Corregidos'\n",
     "tabla_GenBOM_NO_Corregidos = 'GenBOM_NO_Corregidos'\n",
     "\n",
     "tabla_Q_Reporte_Corregidos = 'Q_Reporte_Corregidos'\n",
-    "tabla_GenTER_Corregidos = 'GenTer_Corregidos'\n",
-    "tabla_GenHID_Corregidos = 'GenHID_Corregidos'\n",
-    "tabla_GenMATER_Corregidos = 'GenMATER_Corregidos'\n",
-    "tabla_GenBOM_Corregidos = 'GenBOM_Corregidos'\n",
+    "tabla_GenTER_Corregidos = 'GenTER'\n",
+    "tabla_GenHID_Corregidos = 'GenHID'\n",
+    "tabla_GenMATER_Corregidos = 'GenMATER'\n",
+    "tabla_GenBOM_Corregidos = 'GenBOM'\n",
     "\n",
     "method_id = \"findDocumentosByNemoRango?\" #ID\n",
     "method_zip = \"findAllAttachmentZipByNemoId?\"\n",
     "\n",
-    "fecha_desde = \"2024-01-01T00:00:00.000-03:00\"\n",
+    "fecha_desde = \"2023-03-01T00:00:00.000-03:00\"\n",
     "fecha_hasta = \"2024-05-31T23:59:59.000-03:00\"\n",
     "fecha_desde_obj = 0\n",
     "fecha_hasta_obj = 1\n",
@@ -107,17 +107,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
     "def DTE_corregidos():\n",
     "\n",
     "    if fecha_desde_obj < fecha_hasta_obj:\n",
-    "        print(\"Se realiza el update DTE_NO_Corregidos\")\n",
+    "        print(\"Se realiza el update DTE\")\n",
     "        \n",
     "        for fecha_actual, fecha_siguiente in iterar_entre_meses(fecha_desde,fecha_hasta):\n",
-    "\n",
     "\n",
     "            url_doc_id = f\"{URL}{method_id}fechadesde={fecha_actual.isoformat()}&fechahasta={fecha_siguiente.isoformat()}&nemo={NEMO}\"\n",
     "\n",
@@ -165,7 +164,7 @@
     "\n",
     "                                conn = pyodbc.connect(conn_str)\n",
     "\n",
-    "                                Q_Reporte = pd.read_sql(\"SELECT * FROM Q_Reporte\", conn)\n",
+    "                                #Q_Reporte = pd.read_sql(\"SELECT * FROM Q_Reporte\", conn)\n",
     "                                GenMATER = pd.read_sql(\"SELECT * FROM GenMATER\", conn)\n",
     "                                GenTER = pd.read_sql(\"SELECT * FROM GenTER\", conn)\n",
     "                                GenHID = pd.read_sql(\"SELECT * FROM GenHID\", conn)\n",
@@ -173,35 +172,35 @@
     "                                \n",
     "                                conn.close()\n",
     "\n",
+    "                                #print(GenTER.columns)\n",
     "                                mes_datetime = datetime.strptime(mes_mdb, '%m-%Y')\n",
     "                                mes_mdb_formated = mes_datetime.strftime('%Y-%m')\n",
     "\n",
-    "                                Q_Reporte.insert(0, 'FECHA', mes_mdb_formated)\n",
-    "                                # GenMATER.insert(0, 'FECHA', mes_mdb_formated)\n",
-    "                                # GenTER.insert(0, 'FECHA', mes_mdb_formated)\n",
-    "                                # GenHID.insert(0, 'FECHA', mes_mdb_formated)\n",
-    "                                # GenBOM.insert(0, 'FECHA', mes_mdb_formated)\n",
+    "                                #Q_Reporte.insert(0, 'FECHA', mes_mdb_formated)\n",
+    "                                GenMATER.insert(0, 'FECHA', mes_mdb_formated)\n",
+    "                                GenTER.insert(0, 'FECHA', mes_mdb_formated)\n",
+    "                                GenHID.insert(0, 'FECHA', mes_mdb_formated)\n",
+    "                                GenBOM.insert(0, 'FECHA', mes_mdb_formated)\n",
     "\n",
     "                                quoted = urllib.parse.quote_plus(connection_string)\n",
     "\n",
-    "                                agentes = [\"CPBUENAG\", \"CTBARRAG\",\"CTGUEMEG\",\"CTGUEPLG\",\"CTLLATAG\",\"CTPBUEMG\",\"CTPIQUIG\",\"CTPPILAG\",\"ECOENERG\",\"GENELBAG\",\"GENELCCG\",\"GENELPLG\",\"HIDIAMAG\",\"HINIHUIG\",\"HREYESYG\",\"PAMPAENG\",\"PEPAMPAG\",\"PEVARAUG\",\"PPLEUFUG\"]\n",
+    "                                agentes = [\"CPBUENAG\", \"CTBARRAG\",\"CTGUEMEG\",\"CTGUEPLG\",\"CTLLATAG\",\"CTPBUEMG\",\"CTPIQUIG\",\n",
+    "                                           \"CTPPILAG\",\"ECOENERG\",\"GENELBAG\",\"GENELCCG\",\"GENELPLG\",\"HIDIAMAG\",\"HINIHUIG\",\n",
+    "                                           \"HREYESYG\",\"PAMPAENG\",\"PEPAMPAG\",\"PEVARAUG\",\"PPLEUFUG\"]\n",
     "\n",
-    "                                \n",
-    "                                df_Q_Reporte = Q_Reporte[Q_Reporte[\"NEMO\"].isin(agentes)]\n",
-    "                                #df_GenMATER = GenMATER[GenMATER[\"AGENTE\"].isin(agentes)]\n",
-    "                                #df_GenTER = GenTER[GenTER[\"AGENTE\"].isin(agentes)]\n",
-    "                                #df_GenHID = GenHID[GenHID[\"AGENTE\"].isin(agentes)]\n",
-    "                                #df_GenBOM = GenBOM[GenBOM[\"AGENTE\"].isin(agentes)]\n",
-    "\n",
+    "                                #df_Q_Reporte = Q_Reporte[Q_Reporte[\"NEMO\"].isin(agentes)]\n",
+    "                                df_GenMATER = GenMATER[GenMATER[\"AGENTE\"].isin(agentes)]\n",
+    "                                df_GenTER = GenTER[GenTER[\"AGENTE\"].isin(agentes)]\n",
+    "                                df_GenHID = GenHID[GenHID[\"AGENTE\"].isin(agentes)]\n",
+    "                                df_GenBOM = GenBOM[GenBOM[\"AGENTE\"].isin(agentes)]\n",
     "\n",
     "                                engine = sqlalchemy.create_engine('mssql+pyodbc:///?odbc_connect={}'.format(quoted))\n",
     "\n",
-    "\n",
-    "                                df_Q_Reporte.to_sql(f'{tabla_Q_Reporte_Corregidos}', schema='dbo', con=engine, if_exists='append', chunksize=20000)\n",
-    "                                #df_GenMATER.to_sql(f'{tabla_GenMATER_Corregidos}', schema='dbo', con=engine, if_exists='append', chunksize=20000)\n",
-    "                                #df_GenTER.to_sql(f'{tabla_GenTER_Corregidos}', schema='dbo', con=engine, if_exists='append', chunksize=20000)\n",
-    "                                #df_GenHID.to_sql(f'{tabla_GenHID_Corregidos}', schema='dbo', con=engine, if_exists='append', chunksize=20000)\n",
-    "                                #df_GenBOM.to_sql(f'{tabla_GenBOM_Corregidos}', schema='dbo', con=engine, if_exists='append', chunksize=20000)\n",
+    "                                #df_Q_Reporte.to_sql(f'{tabla_Q_Reporte_Corregidos}', schema='dbo', con=engine, if_exists='append', chunksize=20000)\n",
+    "                                df_GenMATER.to_sql(f'{tabla_GenMATER_Corregidos}', schema='dbo', con=engine, if_exists='append', chunksize=20000)\n",
+    "                                df_GenTER.to_sql(f'{tabla_GenTER_Corregidos}', schema='dbo', con=engine, if_exists='append', chunksize=20000)\n",
+    "                                df_GenHID.to_sql(f'{tabla_GenHID_Corregidos}', schema='dbo', con=engine, if_exists='append', chunksize=20000)\n",
+    "                                df_GenBOM.to_sql(f'{tabla_GenBOM_Corregidos}', schema='dbo', con=engine, if_exists='append', chunksize=20000)\n",
     "                        \n",
     "                                #Q_Reporte.to_sql(f'{tabla_Q_Reporte_Corregidos}', schema='dbo', con=engine, if_exists='append', chunksize=20000)\n",
     "                                #GenMATER.to_sql(f'{tabla_GenMATER_Corregidos}', schema='dbo', con=engine, if_exists='append', chunksize=20000)\n",
@@ -219,14 +218,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Se realiza el update DTE_NO_Corregidos\n",
+      "Se realiza el update DTE\n",
+      "03-2023\n",
+      "04-2023\n",
+      "05-2023\n",
+      "06-2023\n",
+      "07-2023\n",
+      "08-2023\n",
+      "09-2023\n",
+      "10-2023\n",
+      "11-2023\n",
+      "12-2023\n",
       "01-2024\n",
       "02-2024\n",
       "03-2024\n",
