Cargando historicos tablas combustibles

--- a/main.ipynb
+++ b/main.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,15 +81,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<function es_ultimo_dia_del_mes at 0x0000019A57B7C540>\n",
-      "No es el último día del mes.\n"
+     "ename": "TypeError",
+     "evalue": "es_ultimo_dia_del_mes() missing 1 required positional argument: 'fecha'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 11\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[38;5;66;03m# Obtener la fecha actual\u001b[39;00m\n\u001b[0;32m      9\u001b[0m fecha_now \u001b[38;5;241m=\u001b[39m datetime\u001b[38;5;241m.\u001b[39mnow()\n\u001b[1;32m---> 11\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mes_ultimo_dia_del_mes\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m)\n\u001b[0;32m     13\u001b[0m \u001b[38;5;66;03m# Verificar si es el último día del mes\u001b[39;00m\n\u001b[0;32m     14\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m es_ultimo_dia_del_mes(fecha_now):\n",
+      "\u001b[1;31mTypeError\u001b[0m: es_ultimo_dia_del_mes() missing 1 required positional argument: 'fecha'"
      ]
     }
    ],
