Agregado PEP6EO y quitado CORTEO

--- a/main.ipynb
+++ b/main.ipynb
@@ -824,7 +824,7 @@
     "                #Por limitaciones de tamaño de excel filtramos solo las máquinas Pampa\n",
     "                valores_filtrados = [\"ADTOHI\", \"AR21EO\", \"BAHIEO\", \"BBLATV29\", \"BBLATV30\",\n",
     "                                    \"BBLMDI01\", \"BBLMDI02\", \"BBLMDI03\", \"BBLMDI04\", \n",
-    "                                    \"BBLMDI05\", \"BBLMDI06\", \"CERITV01\", \"CORTEO\", \n",
+    "                                    \"BBLMDI05\", \"BBLMDI06\", \"CERITV01\", \"PEP6EO\", \n",
     "                                    \"EBARTG01\", \"EBARTG02\", \"EBARTV01\", \"ETIGHI\", \n",
     "                                    \"GEBATG01\", \"GEBATG02\", \"GEBATG03\", \"GEBATG04\", \n",
     "                                    \"GEBATV01\", \"GEBATV02\", \"GUEMTG01\", \"GUEMTV11\", \n",
