Solucionado Tabla Restricciones_Renovables

--- a/Post_op_historicos.ipynb
+++ b/Post_op_historicos.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,13 +89,13 @@
     "tabla_valores = 'Valores_Corregidos'\n",
     "tabla_contratos = 'Contratos_Corregidos'\n",
     "tabla_novedades = 'Novedades_Corregidos'\n",
-    "tabla_combustibles_quemados_det_total = 'COMBUSTIBLES_QUEMADOS_DET_TOTAL_NO_Corregidos'\n",
-    "tabla_combustible_porcentaje_det = 'COMBUSTIBLE_PORCENTAJE_DET_NO_Corregidos'\n",
-    "tabla_com_quemados_scom = 'COM_QUEMADOS_SCOM_NO_Corregidos'\n",
-    "tabla_restricciones_renovables = 'RESTRICCIONES_RENOVABLES_NO_Corregidos'\n",
+    "tabla_combustibles_quemados_det_total = 'COMBUSTIBLES_QUEMADOS_DET_TOTAL_Corregidos'\n",
+    "tabla_combustible_porcentaje_det = 'COMBUSTIBLE_PORCENTAJE_DET_Corregidos'\n",
+    "tabla_com_quemados_scom = 'COM_QUEMADOS_SCOM_Corregidos'\n",
+    "tabla_restricciones_renovables = 'RESTRICCIONES_RENOVABLES_Corregidos'\n",
     "\n",
     "##########\n",
-    "NEMO = \"PARTE_POST_OPERATIVO\"\n",
+    "NEMO = \"PARTE_POST_OPERATIVO_UNIF\"\n",
     "##########\n",
     "\n",
     "URL = f\"https://api.cammesa.com/pub-svc/public/\"\n",
@@ -109,12 +109,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "fecha_desde = \"2024-05-01T00:00:00.000-03:00\"\n",
-    "fecha_hasta = \"2024-07-14T23:59:59.000-03:00\"\n",
+    "fecha_hasta = \"2024-07-22T23:59:59.000-03:00\"\n",
     "fecha_desde_obj = 0\n",
     "fecha_hasta_obj = 1\n",
     "\n",
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -214,6 +214,14 @@
       "12-07-2024\n",
       "13-07-2024\n",
       "14-07-2024\n",
+      "15-07-2024\n",
+      "16-07-2024\n",
+      "17-07-2024\n",
+      "18-07-2024\n",
+      "19-07-2024\n",
+      "20-07-2024\n",
+      "21-07-2024\n",
+      "22-07-2024\n",
       "Finaliza el update\n"
      ]
     }
@@ -286,9 +294,9 @@
     "\n",
     "            #3\n",
     "            #-------------------------------------------------------#\n",
-    "            # valores_generadores = pd.read_sql(\"SELECT * FROM VALORES_GENERADORES\", conn)\n",
-    "            # contrato_abastecimiento = pd.read_sql(\"SELECT * FROM CONTRATO_ABASTECIMIENTO\", conn)\n",
-    "            # novedades = pd.read_sql(\"SELECT * FROM NOVEDADES\", conn)\n",
+    "            valores_generadores = pd.read_sql(\"SELECT * FROM VALORES_GENERADORES\", conn)\n",
+    "            contrato_abastecimiento = pd.read_sql(\"SELECT * FROM CONTRATO_ABASTECIMIENTO\", conn)\n",
+    "            novedades = pd.read_sql(\"SELECT * FROM NOVEDADES\", conn)\n",
     "            comb_quemados_scom = pd.read_sql(\"SELECT * FROM COMB_QUEMADOS_SCOM\", conn)\n",
     "            combustible_porcentaje_det = pd.read_sql(\"SELECT * FROM COMBUSTIBLE_PORCENTAJE_DET\", conn)\n",
     "            combustibles_quemados_det_total = pd.read_sql(\"SELECT * FROM  COMBUSTIBLES_QUEMADOS_DET_TOTAL\", conn)\n",
@@ -307,9 +315,9 @@
     "            \n",
     "            #4\n",
     "            #-------------------------------------------------------#\n",
-    "            # valores_generadores.insert(0, 'FECHA', dia_mdb_formatted)\n",
-    "            # contrato_abastecimiento.insert(0, 'FECHA', dia_mdb_formatted)\n",
-    "            # novedades.insert(0, 'FECHA', dia_mdb_formatted)\n",
+    "            valores_generadores.insert(0, 'FECHA', dia_mdb_formatted)\n",
+    "            contrato_abastecimiento.insert(0, 'FECHA', dia_mdb_formatted)\n",
+    "            novedades.insert(0, 'FECHA', dia_mdb_formatted)\n",
     "            comb_quemados_scom.insert(0, 'FECHA', dia_mdb_formatted)\n",
     "            combustible_porcentaje_det.insert(0, 'FECHA', dia_mdb_formatted)\n",
     "            combustibles_quemados_det_total.insert(0, 'FECHA', dia_mdb_formatted)\n",
@@ -321,7 +329,7 @@
     "            #Por limitaciones de tamaño de excel filtramos solo las máquinas Pampa\n",
     "            valores_filtrados = [\"ADTOHI\", \"AR21EO\", \"BAHIEO\", \"BBLATV29\", \"BBLATV30\",\n",
     "                                \"BBLMDI01\", \"BBLMDI02\", \"BBLMDI03\", \"BBLMDI04\", \n",
-    "                                \"BBLMDI05\", \"BBLMDI06\", \"CERITV01\", \n",
+    "                                \"BBLMDI05\", \"BBLMDI06\", \"CERITV01\", \"PEP6EO\",\n",
     "                                \"EBARTG01\", \"EBARTG02\", \"EBARTV01\", \"ETIGHI\", \n",
     "                                \"GEBATG01\", \"GEBATG02\", \"GEBATG03\", \"GEBATG04\", \n",
     "                                \"GEBATV01\", \"GEBATV02\", \"GUEMTG01\", \"GUEMTV11\", \n",
@@ -333,9 +341,9 @@
     "            \n",
     "            contratos_filtrados = [\"C.T. LOMA DE LA LATA\", \"C.T.E.BARRAGAN TV-M\", \"CT LOMA II LA LATA-M\", \"GENELBA CC -MERCA\", \"PIEDRABUENA  R21-\",\"CT PILAR BS AS M\"]\n",
     "\n",
-    "            # df_valores = valores_generadores[valores_generadores[\"GRUPO\"].isin(valores_filtrados)]  \n",
-    "            # df_contratos = contrato_abastecimiento[contrato_abastecimiento[\"CONTRATO\"].isin(contratos_filtrados)] \n",
-    "            # df_novedades = novedades[novedades[\"GRUPO\"].isin(valores_filtrados)] \n",
+    "            df_valores = valores_generadores[valores_generadores[\"GRUPO\"].isin(valores_filtrados)]  \n",
+    "            df_contratos = contrato_abastecimiento[contrato_abastecimiento[\"CONTRATO\"].isin(contratos_filtrados)] \n",
+    "            df_novedades = novedades[novedades[\"GRUPO\"].isin(valores_filtrados)] \n",
     "            df_comb_quemados_scom = comb_quemados_scom[comb_quemados_scom[\"GRUPO\"].isin(valores_filtrados)]\n",
     "            df_combustible_porcentaje_det = combustible_porcentaje_det[combustible_porcentaje_det[\"GRUPO\"].isin(valores_filtrados)]\n",
     "            df_combustibles_quemados_det_total = combustibles_quemados_det_total[combustibles_quemados_det_total[\"GRUPO\"].isin(valores_filtrados)]\n",
@@ -343,9 +351,9 @@
     "            \n",
     "            engine = sqlalchemy.create_engine('mssql+pyodbc:///?odbc_connect={}'.format(quoted))\n",
     "            \n",
-    "            # df_valores.to_sql(f'{tabla_valores}', schema='dbo', con=engine, if_exists='append', chunksize=20000)\n",
-    "            # df_contratos.to_sql(f'{tabla_contratos}', schema='dbo', con=engine, if_exists='append', chunksize=20000)\n",
-    "            # df_novedades.to_sql(f'{tabla_novedades}', schema='dbo', con=engine, if_exists='append', chunksize=20000)\n",
+    "            df_valores.to_sql(f'{tabla_valores}', schema='dbo', con=engine, if_exists='append', chunksize=20000)\n",
+    "            df_contratos.to_sql(f'{tabla_contratos}', schema='dbo', con=engine, if_exists='append', chunksize=20000)\n",
+    "            df_novedades.to_sql(f'{tabla_novedades}', schema='dbo', con=engine, if_exists='append', chunksize=20000)\n",
     "            df_comb_quemados_scom.to_sql(f'{tabla_com_quemados_scom}', schema='dbo', con=engine, if_exists='append', chunksize=20000)\n",
     "            df_combustible_porcentaje_det.to_sql(f'{tabla_combustible_porcentaje_det}', schema='dbo', con=engine, if_exists='append', chunksize=20000)\n",
     "            df_combustibles_quemados_det_total.to_sql(f'{tabla_combustibles_quemados_det_total}', schema='dbo', con=engine, if_exists='append', chunksize=20000)\n",
