--- a/sql/select_from_diario.ipynb
+++ b/sql/select_from_diario.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,8 @@
     "#server = 'DESKTOP-37ESKFT\\SQLEXPRESS'\n",
     "database = 'TAPI'\n",
     "tabla_nc = 'Valores_Gen_Diario_Automatico'\n",
-    "tabla_c = 'GenMATER_Corregidos'"
+    "tabla_c = 'GenMATER_Corregidos'\n",
+    "tabla = "
    ]
   },
   {
