--- a/test/dte_testing.ipynb
+++ b/test/dte_testing.ipynb
@@ -164,7 +164,7 @@
     "\n",
     "                                conn = pyodbc.connect(conn_str)\n",
     "\n",
-    "                                #Q_Reporte = pd.read_sql(\"SELECT * FROM Q_Reporte\", conn)\n",
+    "                                Q_Reporte = pd.read_sql(\"SELECT * FROM Q_Reporte\", conn)\n",
     "                                GenMATER = pd.read_sql(\"SELECT * FROM GenMATER\", conn)\n",
     "                                GenTER = pd.read_sql(\"SELECT * FROM GenTER\", conn)\n",
     "                                GenHID = pd.read_sql(\"SELECT * FROM GenHID\", conn)\n",
@@ -176,7 +176,7 @@
     "                                mes_datetime = datetime.strptime(mes_mdb, '%m-%Y')\n",
     "                                mes_mdb_formated = mes_datetime.strftime('%Y-%m')\n",
     "\n",
-    "                                #Q_Reporte.insert(0, 'FECHA', mes_mdb_formated)\n",
+    "                                Q_Reporte.insert(0, 'FECHA', mes_mdb_formated)\n",
     "                                GenMATER.insert(0, 'FECHA', mes_mdb_formated)\n",
     "                                GenTER.insert(0, 'FECHA', mes_mdb_formated)\n",
     "                                GenHID.insert(0, 'FECHA', mes_mdb_formated)\n",
@@ -188,7 +188,7 @@
     "                                           \"CTPPILAG\",\"ECOENERG\",\"GENELBAG\",\"GENELCCG\",\"GENELPLG\",\"HIDIAMAG\",\"HINIHUIG\",\n",
     "                                           \"HREYESYG\",\"PAMPAENG\",\"PEPAMPAG\",\"PEVARAUG\",\"PPLEUFUG\"]\n",
     "\n",
-    "                                #df_Q_Reporte = Q_Reporte[Q_Reporte[\"NEMO\"].isin(agentes)]\n",
+    "                                df_Q_Reporte = Q_Reporte[Q_Reporte[\"NEMO\"].isin(agentes)]\n",
     "                                df_GenMATER = GenMATER[GenMATER[\"AGENTE\"].isin(agentes)]\n",
     "                                df_GenTER = GenTER[GenTER[\"AGENTE\"].isin(agentes)]\n",
     "                                df_GenHID = GenHID[GenHID[\"AGENTE\"].isin(agentes)]\n",
@@ -196,7 +196,7 @@
     "\n",
     "                                engine = sqlalchemy.create_engine('mssql+pyodbc:///?odbc_connect={}'.format(quoted))\n",
     "\n",
-    "                                #df_Q_Reporte.to_sql(f'{tabla_Q_Reporte_Corregidos}', schema='dbo', con=engine, if_exists='append', chunksize=20000)\n",
+    "                                df_Q_Reporte.to_sql(f'{tabla_Q_Reporte_Corregidos}', schema='dbo', con=engine, if_exists='append', chunksize=20000)\n",
     "                                df_GenMATER.to_sql(f'{tabla_GenMATER_Corregidos}', schema='dbo', con=engine, if_exists='append', chunksize=20000)\n",
     "                                df_GenTER.to_sql(f'{tabla_GenTER_Corregidos}', schema='dbo', con=engine, if_exists='append', chunksize=20000)\n",
     "                                df_GenHID.to_sql(f'{tabla_GenHID_Corregidos}', schema='dbo', con=engine, if_exists='append', chunksize=20000)\n",
